Fixed logo overlapping

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ footer p {
 
 .info-container {
     margin-right: -12.5%;
-    margin-top: 5%;
+    margin-top: 15%;
 }
 
 @media only screen and (min-width: 981px) {
@@ -452,6 +452,7 @@ footer p {
         margin-right: -2em;
         min-height: 30%;
         max-height: 30%;
+        margin-bottom: 20%;
     }
 
     .col-1-3 {
@@ -490,11 +491,11 @@ footer p {
     }
     
     #faq {
-        margin-top: 3em;
+        margin-top: 55%;
     }
     
     .info-container {
-        margin-top: 16%;
+        margin-top: 22%;
     }
 
     .social > a > img {
